Add HTML structure for header class in index.html and text within

--- a/index.html
+++ b/index.html
@@ -24,5 +24,13 @@
             </ul>
         </div>
     </nav>
+    <header class="header">
+        <div class="container">
+            <div>
+                <h1>Flexbox crash course</h1>
+                <p>This crash Course was made so that I can leatn the basics of Flexbox. Flexbox is a very improtant and useful tool in CSS</p>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
