Add img of bird

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h1>Flexbox crash course</h1>
                 <p>This crash Course was made so that I can leatn the basics of Flexbox. Flexbox is a very improtant and useful tool in CSS</p>
             </div>
+            <img src="assets/images/Bird.jpg" alt="A colorful bird">
         </div>
     </header>
 </body>
