Add content to main section in html.index

--- a/index.html
+++ b/index.html
@@ -33,5 +33,22 @@
             <img src="assets/images/Bird.jpg" alt="A colorful bird">
         </div>
     </header>
+
+    <section class="boxes">
+        <div class="container">
+            <div class="box">
+                <h2>Alignment and space</h2>
+                <p>A more efficient way to lay out, align, and distribute space among items in a container.</p>
+            </div>
+            <div class="box">
+                <h2>Tricky positioning</h2>
+                <p>Flexbox usually solves tricky problems including how to position or dynamically resize elements on a page.</p>
+            </div>
+            <div class="box">
+                <h2>Responsive design</h2>
+                <p>Flexbox makes building a website layout (and making it responsive!) much easier.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
