--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Flexbox Crash Course</title>
 </head>
 <body>
-    <nav class="navbar">
+    <nav id="navbar">
         <div class="container">
             <div class="logo">Flexbox</div>
             <ul class="nav-links">
